--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
+<!DOCTYPE html>
 <html>
-    <body>
-        <a href="https://accounts.google.com" target="_top"><img src="spare-fish.png"></a>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+  </head>
+  <body>
+    <a href="https://accounts.google.com" target="_top"><img src="spare-fish.png" /></a>
+  </body>
 </html>
